--- a/src/components/MintBox/styles.module.scss
+++ b/src/components/MintBox/styles.module.scss
@@ -1,11 +1,12 @@
 .wrap {
-    border: 1px solid var(--color-3);
+  border: 1px solid var(--color-3);
+  padding: 2rem;
 }
 
 .btnWrap {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
