--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -1,16 +1,16 @@
 .player {
-    background: #080C0A;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 20;
-    padding: 10px;
+  background: #080c0a;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 20;
+  padding: 10px;
 
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: 1.6rem;
-  }
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 16px;
+}
 
 .button {
   height: 20px;
