--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,10 @@ body {
 html {
   font-size: 10px;
   scroll-behavior: smooth;
+
+  @media (max-width: 600px) {
+    font-size: 8.5px;
+  }
 }
 
 $colors: #e5d8fa, #aa8ed7, #45bf75, #6b40fb;
